# src/main/java/school/hei/haapi/model/EventParticipant.java
@@ -1,0 +1,6 @@
+package school.hei.haapi.model;
+
+public class EventParticipant {
+    private String id ;
+    private String name ;
+}
